# Galaxy

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  build_modules.bat  galaxy.cpp  galaxy.h  main.cpp
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml
assets/style/: galaxy-style.css
modules/todolist/: .gitignore  CMakeLists.txt  config.yml  main.cpp  res.qrc  todolist.cpp  todolist.h
modules/todolist/assets/: style.css
modules/todolist/tools/: def.h  json.cpp  json.h  logger.h  manager.cpp  manager.h
modules/todolist/widgets/: clickable.cpp  clickable.h  element.cpp  element.h  filters.h  iconbutton.cpp  iconbutton.h  list.cpp  list.h  popup.cpp  popup.h  sidebartab.cpp  sidebartab.h  sublist.cpp  sublist.h
src/: galaxy.cpp  galaxy.h  galaxy.qrc
src/tools/: logger.h
src/widgets/: sidebar.cpp  sidebar.h  sidebarmodule.cpp  sidebarmodule.h
tools/: logger.cpp  logger.h
